fix scrollbar issue taking up space in the dom

--- a/opentech/static_src/src/sass/apply/base/_base.scss
+++ b/opentech/static_src/src/sass/apply/base/_base.scss
@@ -16,10 +16,6 @@ html {
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-
-    @supports(overflow-y: overlay) {
-        overflow-y: overlay;
-    }
 }
 
 body {
@@ -27,7 +23,13 @@ body {
 
     &.no-scroll {
         overflow-y: hidden;
-	}
+    }
+
+    &.app-open {
+        @supports(overflow-y: overlay) {
+            overflow-y: overlay;
+        }
+    }
 }
 
 // Prevent empty space below images appearing
